--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,39 @@ input[type='color']::-webkit-color-swatch {
   border-color: #fafafa;
 }
 
+.layer-group {
+  background: #101012;
+  border-style: dashed;
+}
+
+.layer-sub {
+  padding-left: 1.5rem;
+}
+
+.layer-grip--spacer {
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+}
+
+.group-toggle {
+  width: 18px;
+  height: 18px;
+  border: 1px solid #27272a;
+  border-radius: 4px;
+  background: #09090b;
+  color: #a1a1aa;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+}
+
+.group-toggle:hover {
+  color: #fafafa;
+  border-color: #fafafa;
+}
+
 .layer-grip {
   display: grid;
   grid-template-columns: repeat(2, 4px);
